Deployment/rabbitmq/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: commerceflow

spec:
  replicas: 1

  selector:
    matchLabels:
      app: rabbitmq

  template:
    metadata:
      labels:
        app: rabbitmq

    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management

          ports:
            - containerPort: 5672 # AMQP port
            - containerPort: 15672 # HTTP management port

          resources:
            requests:
              cpu: "0.5"
              memory: "1Gi"
            limits:
              cpu: "1"
              memory: "2Gi"

          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq

      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
